--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ disqus_shortname:   SeanEmbrace
 #email:
 twitter:            GroverHB
 facebook:           seanembrace
-github-url:         https://github.com/SeanEmbrace
+github-url:         SeanEmbrace
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
 #xing:              username
