--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ instagram:          Seans.e
 #foursquare:        username
 #steam:             username
 #dribbble:          username
-youtube:           seanlasater
+#youtube:           
 #youtube-channel:   channel
 #soundcloud:        username
 #weibo:             username
