--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ disqus_shortname:   seanlasater
   #ad-client:
   #ad-slot:
 #bing-verify:
-#email:
+email:              EmbraceUnderground@gmail.com
 twitter:            GroverHB
 facebook:           seanembrace
 github-url:         SeanEmbrace
